--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="gray">#808080</color>
+    <color name="light_gray">#E8E8E8</color>
     <color name="red">#ff0000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
